# FPLData

./: README.md  fetch_and_dump_data.py  fpldata.py  pyproject.toml  setup.cfg  setup.py
fpldata/: __init__.py
