[tool.poetry]
name = "fpldata"
version = "1.2"
description = "Python class to read and hold data from Fantasy Premier League API"
authors = ["Luiz Pizzato"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">3.7"
requests = "^2.26.0"
requests-cache = "^0.7.4"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
