[metadata]
name = fpldata
version = 1.0
author = Luiz Pizzato
description = Python class to read and hold data from Fantasy Premier League API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pizzato/FPLData
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_reqs = parse_requirements('requirements.txt', session='hack')